--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,7 +1,7 @@
 <ion-menu side="start" menuId="first" contentId="main">
   <ion-header>
     <ion-toolbar color="warning">
-      <ion-title>Menú</ion-title>
+      <ion-title>{{'MENU.menu' | translate }}</ion-title>
     </ion-toolbar>
   </ion-header>
   <ion-content>
@@ -13,22 +13,32 @@
       </ion-item>
       <ion-item (click)="goMisDatos()">
         <ion-icon name="people" slot="start"></ion-icon>
-        <ion-label>Mis Datos</ion-label>
+        <ion-label>{{'MISDATOS.titulo' | translate }}</ion-label>
       </ion-item>
       <ion-item (click)="goMisReservas()">
         <ion-icon name="calendar" slot="start"></ion-icon>
-        <ion-label>Mis Reservas</ion-label>
+        <ion-label>{{'MISRESERVAS.titulo' | translate }}</ion-label>
       </ion-item>
       <ion-item (click)="goCheckIn()">
         <ion-icon name="checkmark-circle-outline" slot="start"></ion-icon>
         <ion-label>APP CHECK IN</ion-label>
       </ion-item>
-      <div *ngFor="let c of componentes|async">
-      <ion-item [routerLink]="c.redirecTo">
-        <ion-icon [name]="c.icon" slot="start"></ion-icon>
-        <ion-label>{{c.name}}</ion-label>
+      <ion-item (click)="goCheckIn()">
+        <ion-icon name="logo-usd" slot="start"></ion-icon>
+        <ion-label>{{'MENU.misconsumos' | translate }}</ion-label>
       </ion-item>
-    </div>
+      <ion-item (click)="goCheckIn()">
+        <ion-icon name="checkmark-circle" slot="start"></ion-icon>
+        <ion-label>CHECK OUT</ion-label>
+      </ion-item>
+      <ion-item (click)="goCheckIn()">
+        <ion-icon name="information-circle" slot="start"></ion-icon>
+        <ion-label>{{'MENU.info' | translate }}</ion-label>
+      </ion-item>
+      <ion-item (click)="goCheckIn()">
+        <ion-icon name="chatbubbles" slot="start"></ion-icon>
+        <ion-label>{{'MENU.comentarios' | translate }}</ion-label>
+      </ion-item>
       </ion-menu-toggle>
     </ion-list>
   </ion-content>
