--- a/src/app/components/save-book/save-book.component.html
+++ b/src/app/components/save-book/save-book.component.html
@@ -1,7 +1,7 @@
 <ion-header class="ion-no-border">
   <ion-toolbar color="warning">
     <ion-title class="ion-text-center">
-      Datos de nueva Reserva
+      {{'NEWRVA.titulo' | translate }}
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -11,27 +11,27 @@
   <ion-card color="warning" class="ion-margin-vertical">
     <ion-card-content class="ion-margin-vertical">
       <ion-item>
-        <ion-label>Titular de la Rva: </ion-label>
+        <ion-label>{{'NEWRVA.tit' | translate }} </ion-label>
         <br>
         <ion-input type="text" name="tit" [(ngModel)]="book.tit"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label>Agencia Online: </ion-label>
+        <ion-label>{{'NEWRVA.medio' | translate }} </ion-label>
         <br>
         <ion-input type="text" name="ota" [(ngModel)]="book.ota"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label>Código de la reserva: </ion-label>
+        <ion-label>{{'NEWRVA.cod' | translate }} </ion-label>
         <br>
         <ion-input type="text" name="pnr" [(ngModel)]="book.pnr"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label>Fecha de Ingreso: </ion-label>
+        <ion-label>{{'NEWRVA.in' | translate }} </ion-label>
         <br>
         <ion-input type="date" name="ci" [(ngModel)]="book.ci"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label>Fecha de Salida: </ion-label>
+        <ion-label>{{'NEWRVA.out' | translate }} </ion-label>
         <br>
         <ion-input type="date" name="co" [(ngModel)]="book.co"></ion-input>
       </ion-item>
@@ -39,8 +39,8 @@
     <input type="hidden" name="uid" [(ngModel)]="idUser">
 
   </ion-card>
-  <ion-button color="warning" expand="block" class="ion-margin-bottom" (click)="guardarCambios()">Guardar Reserva
+  <ion-button color="warning" expand="block" class="ion-margin-bottom" (click)="guardarCambios()">{{'NEWRVA.guardar' | translate }}
   </ion-button>
-  <ion-button color="danger" expand="block" (click)="closeModal()">Volver sin Guardar Cambios</ion-button>
+  <ion-button color="danger" expand="block" (click)="closeModal()">{{'NEWRVA.volver' | translate }}</ion-button>
   <!-- </form> -->
 </ion-content>
