--- a/src/app/registration/registration.page.html
+++ b/src/app/registration/registration.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
-    <ion-title class="ion-text-center">Registrarse</ion-title>
+    <ion-title class="ion-text-center">{{'REGISTRATION.registrarse' | translate }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -12,7 +12,7 @@
     <ion-col>
       <ion-img src="../assets/img/logo.svg" class="icon ion-margin"></ion-img>
       <ion-item>
-        <ion-label position="floating">Nombre</ion-label>
+        <ion-label position="floating">{{'REGISTRATION.nombre' | translate }}</ion-label>
         <ion-input type="Email" [(ngModel)]="name" name="name"></ion-input>
       </ion-item>
       <ion-item>
@@ -24,7 +24,7 @@
         <ion-input type="Password" [(ngModel)]="password" name="password"></ion-input>
       </ion-item>
       <ion-button color="primary" (click)="saveNewUser()" expand="block">
-        Guardar
+        {{'REGISTRATION.guardar' | translate }}
       </ion-button>
     </ion-col>
   </ion-row>
