--- a/src/app/components/avataruser/avataruser.component.html
+++ b/src/app/components/avataruser/avataruser.component.html
@@ -1,6 +1,10 @@
 <ion-list>
-  <ion-item *ngFor="let item of items;" (click)="onClick(item.func)">
-    <ion-icon name="{{item.icon}}" slot="start"></ion-icon>
-    <ion-label class="text-center">{{item.label}}</ion-label>
+  <ion-item (click)="onClick(1)">
+    <ion-icon name="person" slot="start"></ion-icon>
+    <ion-label class="text-center">{{'MISDATOS.titulo' | translate }}</ion-label>
+  </ion-item>
+  <ion-item (click)="onClick(2)">
+    <ion-icon name="close-circle" slot="start"></ion-icon>
+    <ion-label class="text-center">{{'AVATAR.cerrar' | translate }}</ion-label>
   </ion-item>
 </ion-list>
