--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,6 +3,12 @@
     <ion-title class="ion-text-center">
       Myself Hotel
     </ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)= "openLanguagePopover($event)">
+        <ion-icon name="flag" slot="icon-only">
+        </ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
