ya tengo los datos. ahora a mostrarlos

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -23,7 +23,7 @@
         <ion-icon name="checkmark-circle-outline" slot="start"></ion-icon>
         <ion-label>APP CHECK IN</ion-label>
       </ion-item>
-      <ion-item (click)="goCheckIn()">
+      <ion-item (click)="goMisConsumos()">
         <ion-icon name="logo-usd" slot="start"></ion-icon>
         <ion-label>{{'MENU.misconsumos' | translate }}</ion-label>
       </ion-item>
