ok CO. falta translate

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -27,7 +27,7 @@
         <ion-icon name="logo-usd" slot="start"></ion-icon>
         <ion-label>{{'MENU.misconsumos' | translate }}</ion-label>
       </ion-item>
-      <ion-item (click)="goCheckIn()">
+      <ion-item (click)="goCheckOut()">
         <ion-icon name="checkmark-circle" slot="start"></ion-icon>
         <ion-label>CHECK OUT</ion-label>
       </ion-item>
