ok check out e index

--- a/src/app/home/checkout/checkout.page.html
+++ b/src/app/home/checkout/checkout.page.html
@@ -43,15 +43,15 @@
         <ion-radio-group (ionChange)="checkValue($event)">
         <ion-item>
           <p>Utilizar Tarjeta de Garantía para abonar el total.</p>
-          <ion-radio slot="end" value="1"></ion-radio>
+          <ion-radio slot="end" value=1></ion-radio>
         </ion-item>
         <ion-item>
           <p>Utilizar otra Tarjeta para abonar el total.</p>
-          <ion-radio slot="end" value="2"></ion-radio>
+          <ion-radio slot="end" value=2></ion-radio>
         </ion-item>
         <ion-item>
           <p>Abonar el total en Recepción.</p>
-          <ion-radio slot="end" value="3"></ion-radio>
+          <ion-radio slot="end" value=3></ion-radio>
         </ion-item>
       </ion-radio-group>
       </ion-list>
