--- a/src/app/home/index/index.page.html
+++ b/src/app/home/index/index.page.html
@@ -15,10 +15,20 @@
                 <p>CI: {{bookCH.ci.toDate() | date:'dd/MM/yyyy'}} // CO: {{bookCH.co.toDate() | date:'dd/MM/yyyy'}}
             </ion-item>
         </ion-card-content>
-
-
     </ion-card>
-    <ion-card class="ion-padding" *ngIf="!!booksCH?.length == 0">
+
+    <ion-card *ngIf="booksOUT">
+        <ion-card-content *ngFor="let bookCH of booksOUT">
+            <ion-card-title>{{'INDEX.rvaappch' | translate }}</ion-card-title>
+            <ion-card-subtitle>{{'INDEX.qr' | translate }}</ion-card-subtitle>
+            <ion-item (click)="mostrarQR(bookCH.id)" color="warning">
+                <p> {{'INDEX.cod' | translate }} {{bookCH.pnr}} - {{bookCH.ota}}</p>
+                <p>CI: {{bookCH.ci.toDate() | date:'dd/MM/yyyy'}} // CO: {{bookCH.co.toDate() | date:'dd/MM/yyyy'}}
+            </ion-item>
+        </ion-card-content>
+    </ion-card>
+
+    <ion-card class="ion-padding" *ngIf="!!booksCH?.length == 0 && !!booksOUT?.length == 0">
         <ion-card-title>{{'INDEX.paso0' | translate }}</ion-card-title>
         <ion-card-content>
             <ion-item>
